--- a/tex/preamble.tex
+++ b/tex/preamble.tex
@@ -3,7 +3,7 @@
 \usepackage{url}
 \usepackage{color}
 \usepackage{rotating}
-\usepackage[ngerman,english]{babel}
+\usepackage[english]{babel}
 \selectlanguage{english}
 \usepackage{setspace}
 
